ajustes del header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="bg-dark py-2">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col">
+                    <div class="col d-none d-sm-flex">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item">
                                 <a href="https://twitter.com/fundacion_gantz" class="btn btn-link btn-sm social-links">
@@ -39,7 +39,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col text-end">
+                    <div class="col  text-center text-sm-end">
                         <a href="https://www.unidosporunasonrisa.cl" class="btn btn-link btn-sm">#<span class="text-white">UnidosPorUnaSonrisa</span></a>
                     </div>
                 </div>
