--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
     </main>
-    <footer class="navbar sticky-bottom">
+    <footer class="navbar">
         <div class="container">
             <div class="col-md-4 mx-auto">
                 <ul class="list-inline text-center mb-0">
