--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="bg-dark py-2">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row justify-content-between">
                     <div class="col d-none d-sm-flex">
                         <ul class="list-inline mb-0">
@@ -46,7 +46,7 @@
             </div>
         </div>
         <nav class="navbar">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row w-100 m-0">
                     <div class="col-lg-4 py-4 py-lg-2 text-center text-lg-start">
                         <a class="logo-fundacion" href="https://gantz.cl/">
@@ -65,7 +65,14 @@
         <section class="container">
             <div class="row">
                 <div class="col-6 py-5">
-                    
+                    <h2>Unidos por una sonrisa</h2>
+                    <ul>
+                        <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
+                        <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
+                        <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
+                        <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
+                    </ul>
+                    <h3>Dona hoy, porque juntos cambiamos vidas</h3>
                 </div>
             </div>
         </section>
