ajustes de estilos

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
                     </div>
                     <hr class="d-block d-lg-none">
                     <div class="col-lg-8 d-block d-lg-flex align-items-center justify-content-end text-center text-lg-start py-4 py-lg-0">
-                        <h1 class="mb-0">Colecta 2025:  <span class="fst-italic fw-light d-block d-xl-inline">Juntos cambiamos vidas</span></h1>
+                        <h1 class="mb-0 text-uppercase fw-bolder">Colecta 2025</h1>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main class="py-5 vh-100">
+        <span><strong>Josefa</strong> 10 años</span>
         <section class="container">
             <div class="row">
                 <div class="col-6 py-5">
