--- a/index.html
+++ b/index.html
@@ -67,17 +67,19 @@
     </header>
     <main class="py-5">
         <span><strong>Josefa</strong> 10 años</span>
-        <section class="container">
+        <section class="container-fluid">
             <div class="row">
-                <div class="col-6 py-5">
+                <div class="col-6">
                     <h2>Unidos por una sonrisa</h2>
-                    <ul>
+                </div>
+                <div class="col-6 py-5">
+                    <ul class="listado-fundacion">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
                         <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
                     </ul>
-                    <h3>Dona hoy, porque juntos cambiamos vidas</h3>
+                    <h3 class="fw-bolder">Dona hoy, porque juntos cambiamos vidas</h3>
                 </div>
             </div>
         </section>
@@ -85,7 +87,7 @@
     <footer class="navbar">
         <div class="container-fluid justify-content-end">
             <div class="col-md-8 ml-auto text-end">
-                <p class="d-inline-block bajada-footer mb-0 me-4">Síguenos para más información</p>
+                <span class="d-inline-block bajada-footer mb-0 me-4">Síguenos para más información</span>
                 <ul class="d-inline-block list-inline text-center mb-0">
                     <li class="list-inline-item">
                         <a href="https://www.facebook.com/fundacion.gantz/?fref=ts" class="btn btn-link btn-sm p-0 social-links">
