ajustes de front

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
     </header>
     <main class="py-5">
         <span><strong>Josefa</strong> 10 años</span>
-        <section class="container-fluid">
+        <section class="container-fluid px-0">
             <div class="row">
                 <div class="col-6">
                     <h2>Unidos por una sonrisa</h2>
                 </div>
-                <div class="col-6 py-5">
-                    <ul class="listado-fundacion">
+                <div class="col-6">
+                    <ul class="listado-fundacion mb-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
                         <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
                     </ul>
-                    <h3 class="fw-bolder">Dona hoy, porque juntos cambiamos vidas</h3>
+                    <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
                 </div>
             </div>
         </section>
