ajustes de botones

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
                         <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
                     </ul>
                     <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
+                    <!-- botones -->
+                     <div class="row py-5">
+                        <div class="col-6 d-grid">
+                            <a class="btn btn-primary btn-lg btn-donacion">
+                                Donar
+                            </a>
+                        </div>
+                        <div class="col-6 d-grid">
+                            <a class="btn btn-primary btn-lg btn-donacion">
+                                Hazte socio
+                            </a>
+                        </div>
+                     </div>
                 </div>
             </div>
         </section>
