--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <span><strong>Josefa</strong> 10 años</span>
         <section class="container-fluid px-0">
             <div class="row">
-                <div class="col-6">
+                <div class="col-5">
                     <h2>Unidos por una sonrisa</h2>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <ul class="listado-fundacion mb-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
@@ -81,16 +81,20 @@
                     </ul>
                     <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
                     <!-- botones -->
-                     <div class="row py-5">
-                        <div class="col-6 d-grid">
-                            <a class="btn btn-primary btn-lg btn-donacion">
+                     <div class="row py-5 px-4">
+                        <div class="col-6 d-grid text-center">
+                            <span class="h5 mb-3">Todos los bancos: débito, créditos, otros.</span>
+                            <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Donar
                             </a>
+                            <span class="h4">Donación única</span>
                         </div>
-                        <div class="col-6 d-grid">
-                            <a class="btn btn-primary btn-lg btn-donacion">
+                        <div class="col-6 d-grid text-center">
+                            <span class="h5 mb-3">Todos los bancos: débito, créditos, pre-pago</span>
+                            <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Hazte socio
                             </a>
+                            <span class="h4">Donación mensual</span>
                         </div>
                      </div>
                 </div>
