foto alvaro y josefa

--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
             </div>
         </nav>
     </header>
-    <main class="py-5">
+    <main class="pt-5">
         <span><strong>Josefa</strong> 10 años</span>
         <section class="container-fluid px-0">
             <div class="row">
                 <div class="col-5">
                     <h2>Unidos por una sonrisa</h2>
+                    <img src="assets/img/josefa-alvaro.png">
                 </div>
                 <div class="col-7">
                     <ul class="listado-fundacion mb-5 px-5">
