ajustes con josefa

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
         </nav>
     </header>
     <main class="pt-5">
-        <span><strong>Josefa</strong> 10 años</span>
         <section class="container-fluid px-0">
             <div class="row">
-                <div class="col-5">
-                    <h2>Unidos por una sonrisa</h2>
-                    <img src="assets/img/josefa-alvaro.png">
+                <div class="col-6">
+                    <div class="alvaro-josefa">
+                        <h2 class="sonrisa">Unidos por una <strong>sonrisa</strong></h2>
+                        <span class="josefa"><strong class="d-block">Josefa</strong> 10 años</span>
+                        <img src="assets/img/josefa-alvaro.png">
+                    </div>
                 </div>
-                <div class="col-7">
+                <div class="col-6 pt-5">
                     <ul class="listado-fundacion mb-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
@@ -84,14 +86,14 @@
                     <!-- botones -->
                      <div class="row py-5 px-4">
                         <div class="col-6 d-grid text-center">
-                            <span class="h5 mb-3">Todos los bancos: débito, créditos, otros.</span>
+                            <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Donar
                             </a>
                             <span class="h4">Donación única</span>
                         </div>
                         <div class="col-6 d-grid text-center">
-                            <span class="h5 mb-3">Todos los bancos: débito, créditos, pre-pago</span>
+                            <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, pre-pago</span>
                             <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Hazte socio
                             </a>
