ajustes de la foto principal

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                         <h2 class="sonrisa">Unidos por una <strong>sonrisa</strong></h2>
                         <span class="josefa"><strong class="d-block">Josefa</strong> 10 años</span>
                         <img src="assets/img/josefa-alvaro.png">
+                        <span class="musica"></span>
+                        <span class="flor-sonrisa"></span>
+                        <span class="llave-de-sol"></span>
                     </div>
                 </div>
                 <div class="col-6 pt-5">
