--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
             <div class="container-fluid">
                 <div class="row w-100 m-0">                    
                     <div class="col-lg-12 d-block d-lg-flex align-items-center justify-content-center text-center py-4">
-                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta">Colecta 2025</h1>
-                        <a class="logo-fundacion" href="https://gantz.cl/">
+                        <a class="logo-fundacion order-xl-2" href="https://gantz.cl/">
                             <img src="assets/img/Logo-Fundacion-Gantz-Blanco.png" alt="Fundación Gantz - Hospital del Niño con Fisura">
                         </a>
+                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-xl-1">Colecta 2025</h1>
+                        
                     </div>
                     <!--<hr class="d-block d-lg-none">
                     <div class="col-lg-6 py-4 py-lg-2 text-center text-lg-start">
@@ -68,8 +69,8 @@
     <main class="pt-5">
         <section class="container-fluid px-0">
             <div class="row">
-                <div class="col-6">
-                    <div class="alvaro-josefa">
+                <div class="col-xl-6">
+                    <div class="alvaro-josefa mx-auto me-xl-auto">
                         <h2 class="sonrisa">Unidos por una <strong>sonrisa</strong></h2>
                         <span class="josefa"><strong class="d-block">Josefa</strong> 10 años</span>
                         <img src="assets/img/josefa-alvaro.png">
@@ -78,7 +79,7 @@
                         <span class="llave-de-sol"></span>
                     </div>
                 </div>
-                <div class="col-6 pt-5">
+                <div class="col-xl-6 pt-5">
                     <ul class="listado-fundacion mb-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
