ajustes de fondos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </nav>
     </header>
-    <main class="pt-5">
+    <main class="pt-5 position-relative">
         <section class="container-fluid px-0">
             <div class="row">
                 <div class="col-xl-6">
@@ -107,6 +107,8 @@
                 </div>
             </div>
         </section>
+        <span class="bg-celeste"></span>
+        <span class="bg-rosado"></span>
     </main>
     <footer class="navbar">
         <div class="container-fluid justify-content-end">
