--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="row w-100 m-0">                    
-                    <div class="col-lg-12 d-block d-lg-flex align-items-center justify-content-center text-center py-4">
+                    <div class="col-lg-12 d-block d-lg-flex align-items-center justify-content-center text-center pt-4">
                         <a class="logo-fundacion order-xl-2" href="https://gantz.cl/">
                             <img src="assets/img/Logo-Fundacion-Gantz-Blanco.png" alt="Fundación Gantz - Hospital del Niño con Fisura">
                         </a>
@@ -66,7 +66,7 @@
             </div>
         </nav>
     </header>
-    <main class="pt-5 position-relative">
+    <main class="pt-0 position-relative overflow-hidden">
         <section class="container-fluid px-0">
             <div class="row">
                 <div class="col-xl-6">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 pt-5">
-                    <ul class="listado-fundacion mb-5 px-5">
+                    <ul class="listado-fundacion mb-5 pt-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
@@ -88,7 +88,7 @@
                     </ul>
                     <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
                     <!-- botones -->
-                     <div class="row py-5 px-4">
+                     <div class="row py-5 px-4 donaciones">
                         <div class="col-6 d-grid text-center">
                             <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
