--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 pt-5">
-                    <ul class="listado-fundacion mb-5 pt-5 px-5">
+                    <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
