--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </ul>
                     <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
                     <!-- botones -->
-                     <div class="row py-5 px-4 donaciones">
+                     <div class="row py-5 pe-5 donaciones">
                         <div class="col-6 d-grid text-center">
                             <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
