--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
                     </div>
                 </div>
                 <div class="col-xl-6 pt-5">
+                    <!-- lista características -->
                     <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
                         <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
                     </ul>
+                    <!-- cinta rosada-->
                     <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
                     <!-- botones -->
-                     <div class="row py-5 pe-5 donaciones">
+                    <div class="row py-5 pe-5 donaciones">
                         <div class="col-6 d-grid text-center">
                             <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
