ajustes de imagenes

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
         </section>
         <span class="bg-celeste"></span>
         <span class="bg-rosado"></span>
+        <span class="abeja"></span>
+        <span class="flor-fucsia"></span>
     </main>
     <footer class="navbar">
         <div class="container-fluid justify-content-end">
