responsive de 1200 a 1680px

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main class="pt-0 position-relative overflow-hidden">
         <section class="container-fluid px-0">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-6 position-relative">
                     <div class="alvaro-josefa mx-auto me-xl-auto">
                         <h2 class="sonrisa">Unidos por una <strong>sonrisa</strong></h2>
                         <span class="josefa"><strong class="d-block">Josefa</strong> 10 años</span>
@@ -92,14 +92,14 @@
                     <!-- botones -->
                     <div class="row py-5 pe-5 donaciones">
                         <div class="col-6 d-grid text-center">
-                            <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, otros.</span>
+                            <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Donar
                             </a>
                             <span class="h4">Donación única</span>
                         </div>
                         <div class="col-6 d-grid text-center">
-                            <span class="h5 mb-3 dona-span">Todos los bancos: débito, créditos, pre-pago</span>
+                            <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, pre-pago</span>
                             <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Hazte socio
                             </a>
