--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="row w-100 m-0">                    
-                    <div class="col-lg-12 d-block d-lg-flex align-items-center justify-content-center text-center pt-4">
+                    <div class="col-lg-12 d-block d-xl-flex align-items-center justify-content-center text-center pt-4">
                         <a class="logo-fundacion order-xl-2" href="https://gantz.cl/">
                             <img src="assets/img/Logo-Fundacion-Gantz-Blanco.png" alt="Fundación Gantz - Hospital del Niño con Fisura">
                         </a>
                         <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-xl-1">Colecta 2025</h1>
-                        
                     </div>
                     <!--<hr class="d-block d-lg-none">
                     <div class="col-lg-6 py-4 py-lg-2 text-center text-lg-start">
@@ -79,44 +78,44 @@
                         <span class="llave-de-sol"></span>
                     </div>
                 </div>
-                <div class="col-xl-6 pt-5">
-                    <!-- lista características -->
-                    <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5">
-                        <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
-                        <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
-                        <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
-                        <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
-                    </ul>
-                    <!-- cinta rosada-->
-                    <h3 class="fw-bolder bg-fucsia px-4 py-2">Dona hoy, porque juntos cambiamos vidas</h3>
+                <div class="col-xl-6 pt-xl-5 d-xl-flex flex-xl-column">
                     <!-- botones -->
-                    <div class="row py-5 pe-5 donaciones">
-                        <div class="col-6 d-grid text-center">
+                    <div class="row py-5 pe-xl-5 px-5 px-xl-0 donaciones order-xl-3">
+                        <div class="col-xl-6 d-grid text-center mb-5 mb-xl-0">
                             <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Donar
                             </a>
                             <span class="h4">Donación única</span>
                         </div>
-                        <div class="col-6 d-grid text-center">
+                        <div class="col-xl-6 d-grid text-center">
                             <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, pre-pago</span>
                             <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3">
                                 Hazte socio
                             </a>
                             <span class="h4">Donación mensual</span>
                         </div>
-                     </div>
+                    </div>
+                    <!-- cinta rosada-->
+                    <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, porque juntos cambiamos vidas</h3>
+                    <!-- lista características -->
+                    <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5 order-xl-1">
+                        <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
+                        <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
+                        <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
+                        <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
+                    </ul>
                 </div>
             </div>
         </section>
-        <span class="bg-celeste"></span>
-        <span class="bg-rosado"></span>
+        <span class="bg-celeste d-none d-xl-block"></span>
+        <span class="bg-rosado d-none d-xl-block"></span>
         <span class="abeja"></span>
         <span class="flor-fucsia"></span>
     </main>
     <footer class="navbar">
         <div class="container-fluid justify-content-end">
-            <div class="col-md-8 ml-auto text-end">
+            <div class="col-xl-8 ml-auto text-end">
                 <span class="d-inline-block bajada-footer mb-0 me-4">Síguenos para más información</span>
                 <ul class="d-inline-block list-inline text-center mb-0">
                     <li class="list-inline-item">
