--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
     </main>
     <footer class="navbar">
         <div class="container-fluid justify-content-end">
-            <div class="col-xl-8 ml-auto text-end">
-                <span class="d-inline-block bajada-footer mb-0 me-4">Síguenos para más información</span>
-                <ul class="d-inline-block list-inline text-center mb-0">
+            <div class="col-12 py-5 py-xl-0 d-block d-xl-flex justify-content-end align-items-center">
+                <ul class="d-block list-inline text-center mb-4 mb-xl-0 order-xl-2">
                     <li class="list-inline-item">
                         <a href="https://www.facebook.com/fundacion.gantz/?fref=ts" class="btn btn-link btn-sm p-0 social-links">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"/></svg>
@@ -137,6 +136,7 @@
                         </a>
                     </li>
                 </ul>
+                <span class="d-block bajada-footer mb-0 me-xl-4 order-xl-1 text-center">Síguenos para más información</span>
             </div>
         </div>
     </footer>
