ajustes de responsive 900px

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
                 <div class="col-xl-6 pt-xl-5 d-xl-flex flex-xl-column">
                     <!-- botones -->
                     <div class="row py-5 pe-xl-5 px-5 px-xl-0 donaciones order-xl-3">
-                        <div class="col-xl-6 d-grid text-center mb-5 mb-xl-0">
+                        <div class="col-lg-6 d-grid text-center mb-5 mb-lg-0">
                             <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, otros.</span>
-                            <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3">
+                            <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3 mx-md-5 mx-lg-0">
                                 Donar
                             </a>
                             <span class="h4">Donación única</span>
                         </div>
-                        <div class="col-xl-6 d-grid text-center">
+                        <div class="col-lg-6 d-grid text-center">
                             <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, pre-pago</span>
-                            <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3">
+                            <a href="https://app.reveniu.com/checkout-custom-link/Y0UmpPFfDUHQ4fWNXN37fd2Pv2ilsRdn" class="btn btn-primary btn-lg btn-donacion mb-3 mx-md-5 mx-lg-0">
                                 Hazte socio
                             </a>
                             <span class="h4">Donación mensual</span>
@@ -99,7 +99,7 @@
                     <!-- cinta rosada-->
                     <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, porque juntos cambiamos vidas</h3>
                     <!-- lista características -->
-                    <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5 order-xl-1">
+                    <ul class="listado-fundacion mb-5 mt-3 pt-5 px-5 order-xl-1 mx-auto mx-xl-0">
                         <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
