--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
                         <span class="flor-sonrisa"></span>
                         <span class="llave-de-sol"></span>
                     </div>
+                    <span class="bg-celeste-movil d-block d-xl-none"></span>
                 </div>
                 <div class="col-xl-6 pt-xl-5 d-xl-flex flex-xl-column">
                     <!-- botones -->
-                    <div class="row py-5 pe-xl-5 px-5 px-xl-0 donaciones order-xl-3">
+                    <div class="row pb-5 pt-3 py-xl-5 pe-xl-5 px-5 px-xl-0 donaciones order-xl-3">
                         <div class="col-lg-6 d-grid text-center mb-5 mb-lg-0">
                             <span class="h5 mb-3 dona-span">Todos los bancos:<br class="esconder-grande"> débito, créditos, otros.</span>
                             <a href="https://www.flow.cl/app/web/pagarBtnPago.php?token=1wooyil" class="btn btn-primary btn-lg btn-donacion mb-3 mx-md-5 mx-lg-0">
