--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <span class="llave-de-sol"></span>
                     </div>
                     <span class="bg-celeste-movil d-block d-xl-none"></span>
+                    <span class="bg-rosado d-block d-xl-none"></span>
                 </div>
                 <div class="col-xl-6 pt-xl-5 d-xl-flex flex-xl-column">
                     <!-- botones -->
