--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="row w-100 m-0">                    
-                    <div class="col-lg-12 d-block d-xl-flex align-items-center justify-content-center text-center pt-4">
-                        <a class="logo-fundacion order-xl-2" href="https://gantz.cl/">
+                    <div class="col-lg-12 d-block d-lg-flex align-items-center justify-content-center text-center pt-4">
+                        <a class="logo-fundacion order-lg-2" href="https://gantz.cl/">
                             <img src="assets/img/Logo-Fundacion-Gantz-Blanco.png" alt="Fundación Gantz - Hospital del Niño con Fisura">
                         </a>
-                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-xl-1">Colecta 2025</h1>
+                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-lg-1">Colecta 2025</h1>
                     </div>
                     <!--<hr class="d-block d-lg-none">
                     <div class="col-lg-6 py-4 py-lg-2 text-center text-lg-start">
