ajustes de textos

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                         </div>
                     </div>
                     <!-- cinta rosada-->
-                    <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, porque juntos cambiamos vidas</h3>
+                    <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, juntos cambiamos vidas</h3>
                     <!-- lista características -->
                     <ul class="listado-fundacion mb-5 mb-xl-3 mt-3 pt-5 px-5 order-xl-1 mx-auto mx-xl-0">
-                        <li><strong>Único hospital en Chile dedicado exclusivamente</strong> a rehabilitar a niños que nacen con fisura labio palatina.</li>
+                        <li>Centro de liderazgo para América del sur y único Hospital en Chile dedicado exclusivamente a rehabilitar a niños y niñas con fisura labiopalatina</li>
                         <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
-                        <li>Tenemos <strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
-                        <li>Somos Centro de Liderazgo para América del Sur y lamentablemente <strong>NO tenemos apoyo del Estado</strong>.</li>
+                        <li><strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
+                        <li><strong>Sin apoyo del Estado</strong>.</li>
                     </ul>
                 </div>
             </div>
