--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, juntos cambiamos vidas</h3>
                     <!-- lista características -->
                     <ul class="listado-fundacion mb-5 mb-xl-3 mt-3 pt-5 px-5 order-xl-1 mx-auto mx-xl-0">
-                        <li>Centro de liderazgo para América del sur y único Hospital en Chile dedicado exclusivamente a rehabilitar a niños y niñas con fisura labiopalatina</li>
-                        <li>Cada niño requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
+                        <li><strong>Centro de liderazgo para América del sur y único Hospital en Chile</strong> dedicado exclusivamente a rehabilitar a niños y niñas con fisura labiopalatina</li>
+                        <li>Cada paciente requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li><strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
                         <li><strong>Sin apoyo del Estado</strong>.</li>
                     </ul>
