--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="logo-fundacion order-lg-2" href="https://gantz.cl/">
                             <img src="assets/img/Logo-Fundacion-Gantz-Blanco.png" alt="Fundación Gantz - Hospital del Niño con Fisura">
                         </a>
-                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-lg-1">Colecta 2025</h1>
+                        <h1 class="mb-0 text-uppercase fw-bolder titulo-colecta order-lg-1">Unidos por una sonrisa</h1>
                     </div>
                     <!--<hr class="d-block d-lg-none">
                     <div class="col-lg-6 py-4 py-lg-2 text-center text-lg-start">
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-xl-6 position-relative">
                     <div class="alvaro-josefa mx-auto me-xl-auto">
-                        <h2 class="sonrisa">Unidos por una <strong>sonrisa</strong></h2>
+                        <h2 class="sonrisa d-none">Unidos por una <strong>sonrisa</strong></h2>
                         <span class="josefa"><strong class="d-block">Josefa</strong> 10 años</span>
                         <img src="assets/img/josefa-alvaro.png">
                         <span class="musica"></span>
@@ -105,7 +105,7 @@
                     <h3 class="fw-bolder bg-fucsia px-4 py-2 order-xl-2 text-center text-xl-start">Dona hoy, juntos cambiamos vidas</h3>
                     <!-- lista características -->
                     <ul class="listado-fundacion mb-5 mb-xl-3 mt-3 pt-5 px-5 order-xl-1 mx-auto mx-xl-0">
-                        <li><strong>Centro de liderazgo para América del Sur y único Hospital en Chile</strong> dedicado exclusivamente a rehabilitar a niños y niñas con fisura labiopalatina</li>
+                        <li><strong>Centro de Liderazgo para América del Sur y único Hospital en Chile</strong> dedicado exclusivamente a rehabilitar a niños y niñas con fisura labiopalatina</li>
                         <li>Cada paciente requiere en promedio <strong>5 cirugías y más de 180 atenciones</strong> para lograr comer, hablar y sonreír sin dificultad.</li>
                         <li><strong>1.300 pacientes activos cada año y más de 10.000</strong> atendidos desde nuestros inicios (47 años).</li>
                         <li><strong>Sin apoyo del Estado</strong>.</li>
